services scroll bug test 3

--- a/services.html
+++ b/services.html
@@ -518,45 +518,41 @@
 
   <!-- ✅ FIXED GSAP / ScrollTrigger -->
   <script>
-document.addEventListener("DOMContentLoaded", () => {
   gsap.registerPlugin(ScrollTrigger);
 
-  // ✅ Mobile stability: stop address-bar resize refresh loops
+  // ✅ avoid refresh loops from mobile address-bar resizing
   ScrollTrigger.config({
     ignoreMobileResize: true,
     autoRefreshEvents: "visibilitychange,DOMContentLoaded,load"
   });
 
-  // ✅ Optional but often helps iOS momentum + pin
+  // ✅ optional iOS helper (often reduces pin weirdness)
   ScrollTrigger.normalizeScroll(true);
 
-  const ring = document.querySelector(".progress-ring");
-  if (!ring) return;
-
+  const ring = document.querySelector('.progress-ring');
   const radius = ring.r.baseVal.value;
   const circumference = 2 * Math.PI * radius;
+
   ring.style.strokeDasharray = circumference;
   ring.style.strokeDashoffset = circumference;
 
-  const circleEl = document.querySelector(".circle2");
-  const dots = Array.from(document.querySelectorAll(".dot"));
-
-  // --- text helpers ---
   let currentText = null;
+
   function showText(id) {
     if (currentText === id) return;
 
-    gsap.killTweensOf(".text-layer");
-    gsap.killTweensOf(".paragraph");
+    gsap.killTweensOf('.text-layer');
+    gsap.killTweensOf('.paragraph');
 
-    gsap.set(".text-layer", { autoAlpha: 0 });
-    gsap.set(".paragraph", { autoAlpha: 0 });
+    gsap.set('.text-layer', { autoAlpha: 0 });
+    gsap.set('.paragraph', { autoAlpha: 0 });
 
     if (id) {
       gsap.fromTo(`#${id}`,
         { autoAlpha: 0, scale: 0.9, filter: "blur(4px)" },
         { autoAlpha: 1, scale: 1, filter: "blur(0px)", duration: 1, ease: "power2.out" }
       );
+
       const para = id.replace("text", "para");
       gsap.to(`#${para}`, { autoAlpha: 1, duration: 1, ease: "power2.out" });
     }
@@ -564,49 +560,102 @@ document.addEventListener("DOMContentLoaded", () => {
     currentText = id;
   }
 
-  // --- dot placement (driven by ONE trigger) ---
-  let baseRadius = 0, cx = 0, cy = 0;
-  const targetAngles = [0, 0, 90, 180, 270];
-
-  function measureCircle() {
-    if (!circleEl) return;
-    const r = circleEl.offsetWidth / 2;
-    baseRadius = r;
-    cx = r;
-    cy = r;
-  }
-
-  function placeDot(dot, deg) {
-    if (!baseRadius) return;
-    const rad = (deg - 90) * Math.PI / 180;
-    let rr = baseRadius - 20;
-    if (deg === 0 || deg === 270) rr = baseRadius - 18;
-
-    const x = cx + rr * Math.cos(rad);
-    const y = cy + rr * Math.sin(rad);
-    dot.style.left = `${x}px`;
-    dot.style.top  = `${y}px`;
-  }
-
-  // Ensure we measure before first refresh and on refresh
-  ScrollTrigger.addEventListener("refreshInit", () => {
-    measureCircle();
-    // set initial dot positions (12 o'clock)
-    dots.forEach(dot => placeDot(dot, 0));
-  });
-
-  measureCircle();
-  dots.forEach(dot => placeDot(dot, 0));
-
-  // --- ring tween container ---
   const strokeTween = gsap.to(ring, {
     strokeDashoffset: circumference,
     ease: "power2.out",
-    duration: 0.25,
+    duration: 0.3,
     paused: true
   });
 
-  // --- create ONE pinned trigger (matchMedia for pinType) ---
+  // -----------------------------
+  // Dot motion trigger
+  // -----------------------------
+  (function initDots() {
+    window.addEventListener("load", () => {
+      const circleEl = document.querySelector(".circle2");
+      const dots = Array.from(document.querySelectorAll(".dot"));
+      if (!circleEl || !dots.length) return;
+
+      function getBase() {
+        const r = circleEl.offsetWidth / 2;
+        return { baseRadius: r, cx: r, cy: r };
+      }
+
+      function placeDot(dot, deg, baseRadius, cx, cy) {
+        const rad = (deg - 90) * Math.PI / 180;
+        let radius = baseRadius - 20;
+        if (deg === 0 || deg === 270) radius = baseRadius - 18;
+        const x = cx + radius * Math.cos(rad);
+        const y = cy + radius * Math.sin(rad);
+        dot.style.left = `${x}px`;
+        dot.style.top  = `${y}px`;
+      }
+
+      const targetAngles = [0, 0, 90, 180, 270];
+
+      function initDotST() {
+        const { baseRadius, cx, cy } = getBase();
+        if (baseRadius <= 0) return;
+
+        // Place all dots at 12 o'clock first
+        dots.forEach(dot => placeDot(dot, 0, baseRadius, cx, cy));
+
+        if (window.__dotST) window.__dotST.kill();
+
+        // ✅ IMPORTANT:
+        // - NO pinType here (this trigger isn't pinned)
+        // - Match the same range as the pinned trigger (4000)
+        window.__dotST = ScrollTrigger.create({
+          trigger: ".circle-section",
+          start: "top top",
+          end: "+=4000",
+          scrub: true,
+          invalidateOnRefresh: true,
+          onUpdate: self => {
+            const p = self.progress;
+            dots.forEach((dot, i) => {
+              const ang = targetAngles[i] * p;
+              placeDot(dot, ang, baseRadius, cx, cy);
+            });
+          }
+        });
+      }
+
+      initDotST();
+
+      // Fade circle-container in at pin start
+      gsap.fromTo(".circle-container", { opacity: 0 }, {
+        opacity: 1,
+        duration: 0.5,
+        ease: "power2.out",
+        immediateRender: false,
+        scrollTrigger: {
+          trigger: ".circle-section",
+          start: "top top",
+          end: "top top",
+          toggleActions: "play none none reverse",
+          invalidateOnRefresh: true
+        }
+      });
+
+      // ✅ resize handling:
+      // Mobile resizes happen constantly due to address bar → don't refresh here.
+      const isMobile = window.matchMedia("(max-width: 768px)").matches;
+
+      window.addEventListener("resize", () => {
+        clearTimeout(window.__dotResizeTO2);
+        window.__dotResizeTO2 = setTimeout(() => {
+          if (window.__dotST) window.__dotST.kill();
+          initDotST();
+          if (!isMobile) ScrollTrigger.refresh();  // ✅ only refresh on desktop/tablet
+        }, 150);
+      });
+    });
+  })();
+
+  // -----------------------------
+  // Pinned circle trigger
+  // -----------------------------
   ScrollTrigger.matchMedia({
 
     "(max-width: 768px)": function () {
@@ -616,21 +665,17 @@ document.addEventListener("DOMContentLoaded", () => {
         end: "+=4000",
         scrub: 2,
         pin: true,
-        pinType: "fixed",          // ✅ important on mobile
+        pinType: "fixed",          // ✅ add this on the pinned trigger (mobile)
         anticipatePin: 1,
         invalidateOnRefresh: true,
 
         onUpdate: self => {
           const p = self.progress;
 
-          // ring progress
           strokeTween.vars.strokeDashoffset = circumference * (1 - p);
           strokeTween.invalidate().restart();
 
-          // dots move (same progress)
-          dots.forEach((dot, i) => placeDot(dot, targetAngles[i] * p));
-
-          // dot activation
+          const dots = document.querySelectorAll('.dot');
           const thresholds = [
             [0, 0.01],
             [1, 0.01],
@@ -638,12 +683,12 @@ document.addEventListener("DOMContentLoaded", () => {
             [3, 0.5],
             [4, 0.75]
           ];
+
           thresholds.forEach(([index, threshold]) => {
-            if (p >= threshold) dots[index]?.classList.add("active");
-            else dots[index]?.classList.remove("active");
+            if (p >= threshold) dots[index]?.classList.add('active');
+            else dots[index]?.classList.remove('active');
           });
 
-          // text
           if (p >= 0.75) showText("text3");
           else if (p >= 0.5) showText("text2");
           else if (p >= 0.25) showText("text1");
@@ -671,8 +716,7 @@ document.addEventListener("DOMContentLoaded", () => {
           strokeTween.vars.strokeDashoffset = circumference * (1 - p);
           strokeTween.invalidate().restart();
 
-          dots.forEach((dot, i) => placeDot(dot, targetAngles[i] * p));
-
+          const dots = document.querySelectorAll('.dot');
           const thresholds = [
             [0, 0.01],
             [1, 0.01],
@@ -680,9 +724,10 @@ document.addEventListener("DOMContentLoaded", () => {
             [3, 0.5],
             [4, 0.75]
           ];
+
           thresholds.forEach(([index, threshold]) => {
-            if (p >= threshold) dots[index]?.classList.add("active");
-            else dots[index]?.classList.remove("active");
+            if (p >= threshold) dots[index]?.classList.add('active');
+            else dots[index]?.classList.remove('active');
           });
 
           if (p >= 0.75) showText("text3");
@@ -697,9 +742,10 @@ document.addEventListener("DOMContentLoaded", () => {
     }
   });
 
-  // Final refresh once everything (video/fonts) has settled
-  window.addEventListener("load", () => ScrollTrigger.refresh());
-});
+  // ✅ Final refresh after load (safe because we limited autoRefreshEvents)
+  window.addEventListener("load", () => {
+    ScrollTrigger.refresh();
+  });
 </script>
 
 
