--- a/services.html
+++ b/services.html
@@ -519,11 +519,7 @@
   <!-- ✅ FIXED GSAP / ScrollTrigger -->
   <script>
     gsap.registerPlugin(ScrollTrigger);
-    // ✅ avoids “refresh while scrolling” on mobile (address bar)
-    ScrollTrigger.config({
-      ignoreMobileResize: true,
-      autoRefreshEvents: "visibilitychange,DOMContentLoaded,load"
-    });
+
     // ✅ Critical mobile fix: prevents address-bar resize from shifting pin starts mid-scroll
     ScrollTrigger.config({ ignoreMobileResize: true });
 
@@ -605,7 +601,6 @@
             trigger: ".circle-section",
             start: "top top",
             end: "+=1000",
-            pinType: "fixed",
             scrub: true,
             invalidateOnRefresh: true,
             onUpdate: self => {
@@ -1188,10 +1183,12 @@
 }
 </style>
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+  // no need to registerPlugin() for basic tweens
   const items = document.querySelectorAll("#designAccordion .acc-item");
+
   let activeItem = null;
 
+  // ---- setup: close all bodies first ----
   items.forEach((item) => {
     const body = item.querySelector(".acc-body");
     gsap.set(body, { height: 0, opacity: 0, overflow: "hidden" });
@@ -1199,6 +1196,7 @@ document.addEventListener("DOMContentLoaded", () => {
     item.setAttribute("aria-expanded", "false");
   });
 
+  // ---- helpers ----
   function openItem(item, { instant = false } = {}) {
     const body = item.querySelector(".acc-body");
 
@@ -1207,14 +1205,12 @@ document.addEventListener("DOMContentLoaded", () => {
 
     gsap.killTweensOf(body);
 
+    // smoother feel: slightly longer + softer ease
     gsap.to(body, {
       height: "auto",
       opacity: 1,
       duration: instant ? 0 : 0.6,
-      ease: "power4.out",
-      onComplete: () => {
-        if (window.ScrollTrigger) ScrollTrigger.refresh();
-      }
+      ease: "power4.out"
     });
   }
 
@@ -1230,13 +1226,11 @@ document.addEventListener("DOMContentLoaded", () => {
       height: 0,
       opacity: 0,
       duration: 0.45,
-      ease: "power4.inOut",
-      onComplete: () => {
-        if (window.ScrollTrigger) ScrollTrigger.refresh();
-      }
+      ease: "power4.inOut"
     });
   }
 
+  // ---- click behavior: open + close at the same time ----
   items.forEach((item) => {
     item.addEventListener("click", () => {
       if (item === activeItem) {
@@ -1245,25 +1239,26 @@ document.addEventListener("DOMContentLoaded", () => {
         return;
       }
 
+      // open new + close old simultaneously
       openItem(item);
       if (activeItem) closeItem(activeItem);
+
       activeItem = item;
     });
   });
 
-  // First open by default
+  // ---- first open by default (instant, no animation on load) ----
   if (items.length) {
     activeItem = items[0];
     openItem(activeItem, { instant: true });
 
+    // lock it to the correct auto height (prevents any tiny jump)
     const body = activeItem.querySelector(".acc-body");
     const h = body.scrollHeight;
     gsap.set(body, { height: h, opacity: 1 });
+    // then allow future opens to animate to auto
     requestAnimationFrame(() => gsap.set(body, { height: "auto" }));
-
-    if (window.ScrollTrigger) ScrollTrigger.refresh();
   }
-});
 </script>
 
   <!-- Products Placeholder -->
